# Arduino_RX_TX

./: .gitignore  Arduino_RX_TX.sln  Arduino_TX_RX.code-workspace  ControllerCompanion.sln  OneDrive - Personal - Shortcut.lnk  config.hex
ADCDMATestHAL/: ADCDMATestHAL.ino  ADCDMATestHAL.vcxproj  ADCDMATestHAL.vcxproj.filters  hal_conf_extra.h
ADCTest/: ADCTest.vcxitems  ADCTest.vcxitems.filters  ADCTest.vcxproj  ADCTest.vcxproj.filters
Arduino_RX/: Arduino_RX.ino  Arduino_RX.ioc  Arduino_RX.launch  Arduino_RX.vcxproj  Arduino_RX.vcxproj.filters  CMakeLists.txt  platformio.ini
Arduino_RX_STM/: .cproject  .mxproject  .project  Arduino_RX.ioc  CMakeLists.txt
Arduino_TX/: HMIDisplay.cpp
Arduino_TX_Display/: Arduino_TX_Display.ino  Arduino_TX_Display.ino.bak  Arduino_TX_Display.inoo  Arduino_TX_Display.prj  Arduino_TX_Display.prj.bak  Arduino_TX_Display.vcxproj  Arduino_TX_Display.vcxproj.filters  Arduino_TX_Display_GSLC.h  Arduino_TX_Display_GSLC.h.bak  Arduino_TX_Display_hmi.cpp  Arduino_TX_Display_hmi.h  platformio.ini
Arduino_TX_Main/: Arduino_TX_Display_hmi.cpp  Arduino_TX_Display_hmi.h  Arduino_TX_Main.ino  Arduino_TX_Main.vcxproj  Arduino_TX_Main.vcxproj.filters  Arduino_TX_guislice_HAL_nrf.vcxproj  CompanionControl.cpp  MCP23X17.cpp  MCP23X17.h  STM32FreeRTOSConfig_extra.h  apply_patches.py  platformio.ini  settingsHelper.cpp  settingsHelper.h
Arduino_TX_NEW/: Arduino_TX_NEW.ino  Arduino_TX_NEW.vcxproj  resource.h  (+3 more)
OldStuff/Arduino_TX_Display_Linux/: Arduino_TX_Display_Linux.c  Arduino_TX_Display_Linux.prj  CMakeLists.txt  Makefile  serial.c  serial.h
(+744 files in other folders)
